--- a/client/index.html
+++ b/client/index.html
@@ -235,6 +235,7 @@
           <script src="components/core/data/university.data.js"></script>
           <script src="components/core/data/university.js"></script>
           <script src="components/core/data/vehicle.js"></script>
+          <script src="components/core/in.groups.of.js"></script>
           <script src="components/layout/footer/footer.controller.js"></script>
           <script src="components/layout/navbar/navbar.controller.js"></script>
           <script src="components/layout/navbar/sub-navbar.controller.js"></script>
