--- a/client/app/dashboard/looking/looking.html
+++ b/client/app/dashboard/looking/looking.html
@@ -1,45 +1,35 @@
-<div ui-view="">
-  <div class="main-wrapper">
-  <div class="container">
+<div class="main-wrapper">
+  <div class="container lookings">
     <div class="row">
+      <div class="page-header">
+        <h2> Looking </h2>
+      </div>
       <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
-        <div class="white-box ">
-            <h2> Looking </h2>
-            <div class="row  my-rooms">
-              <div class="col-xs-12 col-sm-4 col-md-4 col-lg-3 property" ng-repeat="look in looking.lookings">
-                <div class="flip-container" ontouchstart="this.classList.toggle('hover');">
-                  <div class="flipper">
-                    <div class="front white-box">
-                      <div class="picture">
-                        <img ng-if="look.relatedUserId.profileImage" ng-src="api/images{{look.relatedUserId.profileImage}}" class="img-circle" height="100px" width="100px">
-                        <i ng-if="!look.relatedUserId.profileImage" class="fa fa-user" style="font-size:100px"></i>
-                      </div>
-                      <strong class="value">
-                        {{look.relatedUserId.firstname}} {{look.relatedUserId.lastname}}
-                      </strong>
-                      <p class="quote" ng-if="look.relatedUserId.aboutMe">{{look.relatedUserId.aboutMe}}"</p>
-                      <!--<google-map center="map.center" zoom="map.zoom" draggable="true">-->
-                      <!--<marker coords="{{room.propertyDetails.coords}}" idKey="marker.idKey"></marker>-->
-                      <!--</google-map>-->
-                      <div class="info">
-                      </div>
-                      <ul class="specs">
-                        <li><i class="fa fa-users"></i> {{look.gender}}</li>
-                        <li><i class="fa fa-money"></i> {{look.maxMonthlyRent | currency}}</li>
-                        <!--<li><i class="fa fa-show"></i> {{room.roomDetails.sharedBathroom ? "Shared" : "Private"}} bathroom</li>-->
-                        <!--<li><i class="fa fa-calendar"></i> {{room.roomDetails.availableMoveIn | date }}</li>-->
-                      </ul>
-                    </div>
-                    <div class="back">
-                      <a ui-sref=".detail({id:look.id})"> <h2>View</h2> </a>
-                    </div>
+      <slick dots="true" class="slider row" init-onload="true" data="looking.lookings" slides-to-show="4" slides-to-scroll="4" >
+          <div class="col-xs-12 col-sm-6 col-md-3 col-lg-3 looking" ng-repeat="look in looking.lookings">
+            <div class="flip-container" ontouchstart="this.classList.toggle('hover');">
+              <div class="flipper">
+                <div class="front white-box">
+                  <div class="picture">
+                    <img ng-if="look.relatedUserId.profileImage" ng-src="api/images{{look.relatedUserId.profileImage}}" class="img-circle">
+                    <i ng-if="!look.relatedUserId.profileImage" class="fa fa-user" style="font-size:100px"></i>
                   </div>
+                  <h4>{{look.relatedUserId.firstname}} {{look.relatedUserId.lastname}}</h4>
+                  <!-- <p class="quote" ng-if="look.relatedUserId.aboutMe">{{look.relatedUserId.aboutMe}}"</p> -->
+                  <hr>
+                  <ul class="specs">
+                    <li><i class="fa fa-male"></i> {{look.gender}}</li>
+                    <li><i class="fa fa-money"></i> {{look.maxMonthlyRent | currency}}</li>
+                  </ul>
+                </div>
+                <div class="back">
+                  <a ui-sref=".detail({id:look.id})"> <h2>View</h2> </a>
                 </div>
               </div>
             </div>
-        </div>
+          </div>
+        </slick>
       </div>
     </div>
-  </div>
   </div>
 </div>
