--- a/client/app/dashboard/my-rooms/add.new.room/add.new.room.html
+++ b/client/app/dashboard/my-rooms/add.new.room/add.new.room.html
@@ -20,33 +20,33 @@
         <!--</div>-->
 
         <label for="securityDeposit">Security deposit</label>
-        <input type="currency" id="securityDeposit" required name="securityDeposit" class="form-control"  placeholder="security deposit" ng-model="vm.roomsecurityDeposit"/>
+        <input type="number" id="securityDeposit" required name="securityDeposit" class="form-control"  placeholder="security deposit" ng-model="vm.room.securityDeposit"/>
 
         <label for="monthlyUtilityCost">Monthly utility cost</label>
-        <input type="currency" id="monthlyUtilityCost" required name="monthlyUtilityCost" class="form-control"  placeholder="monthly utility cost" ng-model="vm.roommonthlyUtilityCost"/>
+        <input type="number" id="monthlyUtilityCost" required name="monthlyUtilityCost" class="form-control"  placeholder="monthly utility cost" ng-model="vm.room.monthlyUtilityCost"/>
 
         <label for="availableMoveIn">Available</label>
-        <input type="date" id="availableMoveIn" required name="availableMoveIn" class="form-control"  placeholder="available move-in" ng-model="vm.roomavailableMoveIn"/>
+        <input type="date" id="availableMoveIn" required name="availableMoveIn" class="form-control"  placeholder="available move-in" ng-model="vm.room.availableMoveIn"/>
 
         <label for="leaseEndDate">Lease End Date</label>
-        <input type="date" id="leaseEndDate" required name="monthlyPrice" class="form-control"  placeholder="Lease End Date" ng-model="vm.roomleaseEndDate"/>
+        <input type="date" id="leaseEndDate" required name="monthlyPrice" class="form-control"  placeholder="Lease End Date" ng-model="vm.room.leaseEndDate"/>
 
         <label for="leaseType">Lease type</label>
-        <select id="leaseType" class="form-control" ng-model="vm.roomleaseType" required>
+        <select id="leaseType" class="form-control" ng-model="vm.room.leaseType" required>
           <option value="sub-lease">Sub-lease</option>
           <option value="month-to-month">Month to month</option>
           <option value="lease take over">Lease take over</option>
         </select>
 
         <label for="gender">Gender preference</label>
-        <select id="gender"class="form-control" ng-model="vm.roomgender" required>
+        <select id="gender"class="form-control" ng-model="vm.room.gender" required>
           <option value="no preference">no preference</option>
           <option value="male only">male only</option>
           <option value="female only">female only</option>
         </select>
 
         <label for="roomType">Room type</label>
-        <select id="roomType"class="form-control" ng-model="vm.roomroomType" required>
+        <select id="roomType"class="form-control" ng-model="vm.room.roomType" required>
           <option value="single">single</option>
           <option value="double">double</option>
           <option value="loft">loft</option>
@@ -54,23 +54,23 @@
         </select>
 
         <label for="numRoomates">Current number of roommates</label>
-        <input type="number" id="numRoomates" required name="numRoomates" class="form-control" ng-model="vm.roomnumRoomates" min="1" max="10"/>
+        <input type="number" id="numRoomates" required name="numRoomates" class="form-control" ng-model="vm.room.numRoomates" min="1" max="10"/>
 
 
         <label for="sharedBath">Shared Bathroom</label>
-        <input type="checkbox" id="sharedBath" required name="sharedBath" class="form-control"  placeholder="shared bath" ng-model="vm.roomsharedBath"/>
+        <input type="checkbox" id="sharedBath" required name="sharedBath" class="form-control"  placeholder="shared bath" ng-model="vm.room.sharedBath"/>
 
         <label for="furnished">Furnished</label>
-        <input type="checkbox" id="furnished" required name="furnished" class="form-control" ng-model="vm.roomfurnished"/>
+        <input type="checkbox" id="furnished" required name="furnished" class="form-control" ng-model="vm.room.furnished"/>
 
         <label for="parkingAvailable">Parking available</label>
-        <input type="checkbox" id="parkingAvailable" required name="parkingAvailable" class="form-control" ng-model="vm.roomparkingAvailable"/>
+        <input type="checkbox" id="parkingAvailable" required name="parkingAvailable" class="form-control" ng-model="vm.room.parkingAvailable"/>
 
         <label for="smokingAllowed">Smoking allowed</label>
-        <input type="checkbox" id="smokingAllowed" required name="smokingAllowed" class="form-control" ng-model="vm.roomsmokingAllowed"/>
+        <input type="checkbox" id="smokingAllowed" required name="smokingAllowed" class="form-control" ng-model="vm.room.smokingAllowed"/>
 
         <label for="roomDescription">Room description</label>
-        <textarea required name="roomDescription" id="roomDescription" cols="30" rows="5" ng-model="vm.roomdescription"  class="form-control" ></textarea>
+        <textarea required name="roomDescription" id="roomDescription" cols="30" rows="5" ng-model="vm.room.description"  class="form-control" ></textarea>
 
       </div>
       <div class="col-sm-12">
@@ -113,5 +113,5 @@
       </div>
     </form>
   </div>
-  <pre>{{[vm.room, vm.property] | json}}</pre>
+  <pre>{{[vm.room., vm.property] | json}}</pre>
 </div>
