--- a/client/app/account/signup/signup.html
+++ b/client/app/account/signup/signup.html
@@ -41,7 +41,7 @@
       </label>
 
       <p class="help-block" ng-show="form.password.$error.mongoose">{{ signup.errors.password }}</p>
-
+      <p class="help-block">{{ signup.errors.other }}</p>
       <div class="options">
         <input type="submit" value="Sign me up!" class="lrg-btn submit">
         <span>Already have an account? <a class="link" ui-sref="login">Sign in</a></span>
