--- a/client/app/dashboard/my-profile/my.profile.html
+++ b/client/app/dashboard/my-profile/my.profile.html
@@ -1,5 +1,5 @@
 <div class="main-wrapper">
-  <div class="container my-profile" cg-busy="{promise:myProfile.initializeData.$promise, message:'Loading Your Profile', delay:50}">
+  <div class="container my-profile" cg-busy="{promise:myProfile.me.$promise, message:'Loading Your Profile', delay:50}">
     <div ui-view="">
       <div class="page-header">
         <h2> Your Profile </h2>
