--- a/client/index.html
+++ b/client/index.html
@@ -160,19 +160,11 @@
           <script src="app/account/signup/signup.controller.js"></script>
           <script src="app/admin/admin.controller.js"></script>
           <script src="app/admin/admin.js"></script>
-          <script src="app/dashboard/around/around.controller.js"></script>
-          <script src="app/dashboard/around/around.route.js"></script>
-          <script src="app/dashboard/connections/my.connection.controller.js"></script>
-          <script src="app/dashboard/connections/my.connection.route.js"></script>
           <script src="app/dashboard/dashboard.controller.js"></script>
-          <script src="app/dashboard/favorites/my.favorites.controller.js"></script>
-          <script src="app/dashboard/favorites/my.favorites.route.js"></script>
           <script src="app/dashboard/looking/looking-details/looking.detail.controller.js"></script>
           <script src="app/dashboard/looking/looking-details/looking.detail.route.js"></script>
           <script src="app/dashboard/looking/looking.controller.js"></script>
           <script src="app/dashboard/looking/looking.route.js"></script>
-          <script src="app/dashboard/messages/messages.controller.js"></script>
-          <script src="app/dashboard/messages/messages.route.js"></script>
           <script src="app/dashboard/my-profile/add-address/new.address.ctrl.js"></script>
           <script src="app/dashboard/my-profile/add-address/new.address.route.js"></script>
           <script src="app/dashboard/my-profile/add-looking/new.looking.controller.js"></script>
@@ -193,11 +185,6 @@
           <script src="app/dashboard/my-profile/edit-vehicle/edit.vehicle.route.js"></script>
           <script src="app/dashboard/my-profile/my.profile.controller.js"></script>
           <script src="app/dashboard/my-profile/my.profile.route.js"></script>
-          <script src="app/dashboard/my-profile/step1/step1.controller.js"></script>
-          <script src="app/dashboard/my-profile/step1/step1.route.js"></script>
-          <script src="app/dashboard/my-profile/step2/step1.controller.js"></script>
-          <script src="app/dashboard/my-profile/step2/step2.controller.js"></script>
-          <script src="app/dashboard/my-profile/step2/step2.route.js"></script>
           <script src="app/dashboard/my-properties/add.new.property/add.new.property.controller.js"></script>
           <script src="app/dashboard/my-properties/add.new.property/add.new.route.js"></script>
           <script src="app/dashboard/my-properties/my.properties.controller.js"></script>
@@ -235,6 +222,7 @@
           <script src="components/core/data/university.data.js"></script>
           <script src="components/core/data/university.js"></script>
           <script src="components/core/data/vehicle.js"></script>
+          <script src="components/core/filters.js"></script>
           <script src="components/core/in.groups.of.js"></script>
           <script src="components/layout/footer/footer.controller.js"></script>
           <script src="components/layout/navbar/navbar.controller.js"></script>
