--- a/client/index.html
+++ b/client/index.html
@@ -192,6 +192,8 @@
           <script src="app/dashboard/my-properties/property.details/property.details.route.js"></script>
           <script src="app/dashboard/my-rooms/add.new.room/add.new.room.controller.js"></script>
           <script src="app/dashboard/my-rooms/add.new.room/add.new.room.route.js"></script>
+          <script src="app/dashboard/my-rooms/edit.room/edit.room.controller.js"></script>
+          <script src="app/dashboard/my-rooms/edit.room/edit.room.route.js"></script>
           <script src="app/landing/landing.controller.js"></script>
           <script src="app/prerender.controller.js"></script>
           <script src="app/roomDetail/roomDetail.controller.js"></script>
