--- a/client/app/dashboard/dashboard.html
+++ b/client/app/dashboard/dashboard.html
@@ -11,7 +11,7 @@
           <h2> You </h2>
           <div class="white-box buttons-box">
 
-            <a class="btn btn-primary" ui-sref="dashboard.addNewRoom">Post Available Room</a>
+            <a class="btn btn-primary" ui-sref="addRoom">Post Available Room</a>
             <a  class="btn btn-secondary" ui-sref="dashboard.myProfile.addNewLooking">Post Looking</a>
 
           </div>
