--- a/client/app/rooms/edit.room/edit.room.html
+++ b/client/app/rooms/edit.room/edit.room.html
@@ -2,8 +2,14 @@
 <div ng-include="'components/layout/navbar/sub-navbar.html'"></div>
 <div class="container">
   <div class="row">
+    <div class="col-sm-12">
+      <h1>Edit room</h1>
+    </div>
+
+    <button class="btn btn-primary" ng-disabled="editRoomForm.$invalid || editRoomForm.$pristine " ng-click="vm.edit()">Save</button>
+    <button class="btn btn-warning" ng-disabled="editRoomForm.$dirty" ng-click="vm.delete()">Delete</button>
+
     <form name="editRoomForm" ng-submit="vm.edit()" novalidate>
-      <button class="btn btn-primary" ng-disabled="editRoomForm.$invalid && editRoomForm.$dirty">Edit room</button>
       <div class="col-sm-12" id="room-specifics">
         <label for="monthlyPrice">Monthly rent</label>
         <input type="number" id="monthlyPrice" name="monthlyPrice" required class="form-control"  placeholder="monthly price" ng-model="vm.room.monthlyPrice">
