--- a/client/app/dashboard/looking/looking.html
+++ b/client/app/dashboard/looking/looking.html
@@ -23,7 +23,7 @@
                   </ul>
                 </div>
                 <div class="back">
-                  <a ui-sref=".detail({id:look.id})"> <h2>View</h2> </a>
+                  <a ui-sref="lookingDetail({id:look.id})"> <h2>View</h2> </a>
                 </div>
               </div>
             </div>
